fix: `toolCallResult` bubbling up to process instance level
fix: `toolCallResult` bubbling up to process instance level